# PiT

./: README.md  index.html  pyproject.toml
assets/: openimages_classes.txt
configs/infer/: infer_characters.yaml  infer_plush.yaml  infer_products.yaml
configs/train/: train_characters.yaml
demo/: app.py  pit.py
ip_adapter/: ip_adapter.py
ip_lora_inference/: download_ip_adapter.sh  download_loras.sh  inference_ip_lora.py
ip_lora_train/: ip_adapter_for_lora.py  ip_lora_dataset.py  run_example.sh  sdxl_ip_lora_pipeline.py  train_ip_lora.py
ip_plus_space_exploration/: download_directions.sh  download_ip_adapter.sh  edit_by_direction.py  find_direction.py  ip_model_utils.py
model/: dit.py  pipeline_pit.py
scripts/: generate_characters.py  generate_products.py  infer.py
training/: coach.py  dataset.py  train_config.py
utils/: bezier_utils.py  words_bank.py
