[project]
name = "PiT"
version = "1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.2.1",
    "diffusers>=0.32.1",
    "einops>=0.8.0",
    "kornia>=0.8.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "peft>=0.14.0",
    "protobuf>=5.29.2",
    "pyrallis>=0.3.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.0",
    "sentencepiece>=0.2.0",
    "supervision>=0.25.1",
    "tensorboard>=2.18.0",
    "timm>=1.0.12",
    "torch>=2.5.1",
    "torchvision>=0.20.0",
    "transformers>=4.47.1",
    "wandb>=0.19.1",
]


[tool.black]
line-length = 120